<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    tools:context="io.github.opuserzangying.dbmanageapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/main_dbKind"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:entries="@array/dbKind" />

        <EditText
            android:id="@+id/main_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/main_host" />

        <TextView
            android:id="@+id/main_hostSp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/main_sp"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/main_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/main_port"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/main_dbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_dbName" />

        <EditText
            android:id="@+id/main_dbArgument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_arguments"
            android:lines="3" />

        <EditText
            android:id="@+id/main_dbUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username" />

        <EditText
            android:id="@+id/main_dbPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/main_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_connect" />

    <Button
        android:text="fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_testButton" />

</LinearLayout>
